--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">AMBROZIO MUTUNGI</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-whatsapp"></i></a>
-          <a href="#" class="instagram"><i class="bx bxs-phone"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxs-envelope"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://twitter.com/AmbroseLovis" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="http://wa.me/+256781381895" class="facebook"><i class="bx bxl-whatsapp"></i></a>
+          <a href="tel: +256781381895" class="instagram"><i class="bx bxs-phone"></i></a>
+          <a href="mailto: mutungiambrozio212@gmail.com" class="google-plus"><i class="bx bxs-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/mutungi-ambrozio-66a482236/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
@@ -290,7 +290,7 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Alex Smith</h4>
+              <h4>Mutungi Ambrozio</h4>
               <p>
                 <em>
                   Experienced software engineer and web developer with 3 years of proven success in designing and implementing high-performance solutions. 
@@ -307,16 +307,29 @@
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Master of Fine Arts &amp; Graphic Design</h4>
-              <h5>2015 - 2016</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+              <h4>Bachelor of Science in Software Engineering</h4>
+              <h5>2019 - 2023</h5>
+              <p><em>Makerere University, Kampala</em></p>
+              <p>
+                Awarded an advanced undergraduate Honours Degree in in-depth understanding of software engineering principles, techniques, and practices.
+                The intensive educational experience acquired has enabled me to excel in the dynamic and ever-expanding field of software engineering, emerging with the skills, knowledge, and distinction to become a leader and innovator in the software development industry.
+              </p>
             </div>
             <div class="resume-item">
-              <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-              <h5>2010 - 2014</h5>
-              <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-              <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+              <h4>Uganda Advanced Certificate of Education</h4>
+              <h5>2017 - 2018</h5>
+              <p><em>St. Mary's Vocational School, Kyamuhunga</em></p>
+              <p>
+                Awarded a Uganda Advanced Certificate Of Education (UACE)
+              </p>
+            </div>
+            <div class="resume-item">
+              <h4>Uganda Certificate of Education</h4>
+              <h5>2013 - 2016</h5>
+              <p><em>Kitabi Seminary</em></p>
+              <p>
+                Awarded a Uganda Certificate Of Education (UCE)
+              </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -717,9 +730,6 @@
       <div class="copyright">
         &copy; Copyright <strong><span>Ambrose</span></strong>
       </div>
-      <div class="credits">
-        Designed by <span><strong>Lovis-Ambrose</strong></span>
-      </div>
     </div>
   </footer><!-- End  Footer -->
 
@@ -786,6 +796,28 @@
     });
   </script>
 
+  <!-- WhatsApp Floating Widget Code -->
+  <div>
+    <div id="whatsapp-widget" style="position: fixed; bottom: 20px; left: 20px; z-index: 1000;">
+      <a href="https://api.whatsapp.com/send?phone=256781381895" target="_blank" rel="noopener noreferrer">
+        <img src="assets/img/Whatsapp.png" alt="WhatsApp" style="border-radius:100%; width: 60px; box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); animation: float 2s ease-in-out infinite;">
+      </a>
+    </div>
+    <style>
+      @keyframes float {
+        0% {
+          transform: translateY(0);
+        }
+        50% {
+          transform: translateY(-5px);
+        }
+        100% {
+          transform: translateY(0);
+        }
+      }
+    </style>
+  </div>
+  <!-- /WhatsApp Floating Widget Code -->
 </body>
 
 </html>
