resolved issues and deleted redundant branches

--- a/index.html
+++ b/index.html
@@ -711,7 +711,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>iPortfolio</span></strong>
+        &copy; Copyright <strong><span>Ambrose</span></strong>
       </div>
       <div class="credits">
         Designed by <span><strong>Lovis-Ambrose</strong></span>
