--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <meta content="" name="description">
   <meta content="" name="keywords">
 
+  <!-- custom reCAPTCHA -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -694,6 +697,7 @@
               </div>
               <div class="text-center">
                 <!-- google custom reCAPTCHA -->
+                <div class="g-recaptcha" data-sitekey="6LdUwjUoAAAAAGpRYCzP0MjvVT3w_9QbRi1ytCqq"></div> <br> 
                 <p id="status-message"></p>
                 <button type="submit" id="submit-button">Send Message</button>
               </div>
