--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
               </div>
               <div class="text-center">
                 <!-- google custom reCAPTCHA -->
-                <div class="g-recaptcha" data-sitekey="6LdUwjUoAAAAAGpRYCzP0MjvVT3w_9QbRi1ytCqq"></div> <br> 
+                <div class="g-recaptcha" data-sitekey="6LdhgX4oAAAAAL2OHujraQwok38Z99mLoQWLN2j0"></div>
                 <p id="status-message"></p>
                 <button type="submit" id="submit-button">Send Message</button>
               </div>
