fixed error msg

--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
                     statusMessage.textContent = '';
                 }, 3000);
             } else {
-                statusMessage.textContent = 'Message failed to send. Please try again later.';
+                statusMessage.textContent = 'Message failed to send. Fill all fields and check reCAPTCHA.';
                 statusMessage.style.color = 'red';
 
                 // Automatically hide the success message after 3 seconds
