--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
               <span data-purecounter-start="0" data-purecounter-end="100" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Happy Clients</strong></p>
+              <p><strong>Happy Clients and More</strong></p>
             </div>
           </div>
 
