--- a/inner-page.html
+++ b/inner-page.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Lovis-Ambrose - Portfolio</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Mutungi-Ambrozio</title>
+  <meta name="description" content="Mutungi Ambrozio is a software engineer and web developer based in Kampala, Uganda. Expert in designing user interfaces, building web applications, and optimizing backend processes. Available for freelance projects and fulltime employment.">
+  <meta name="keywords" content="Software Engineer, software development, web development, backend development, frontend development, database management, quality assurance, project management, Uganda, freelance developer, Angular, PHP, Python, Django, MySQL, JavaScript, Kampala, Uganda, UI Design, Web Applications, Technology, Portfolio">
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
