--- a/inner-page.html
+++ b/inner-page.html
@@ -9,6 +9,12 @@
   <meta name="description" content="Mutungi Ambrozio is a software engineer and web developer based in Kampala, Uganda. Expert in designing user interfaces, building web applications, and optimizing backend processes. Available for freelance projects and fulltime employment.">
   <meta name="keywords" content="Software Engineer, software development, web development, backend development, frontend development, database management, quality assurance, project management, Uganda, freelance developer, Angular, PHP, Python, Django, MySQL, JavaScript, Kampala, Uganda, UI Design, Web Applications, Technology, Portfolio">
 
+  <meta property="og:title" content="Mutungi-Ambrozio - Software Engineer & Web Developer">
+  <meta property="og:description" content="A passionate software engineer and web developer from Uganda, turning cutting-edge ideas into digital reality. Explore my portfolio of projects.">
+  <meta property="og:image" content="assets/img/favicon.png">
+  <meta property="og:url" content="https://yourwebsite.com">
+  <meta property="og:type" content="website">
+
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -39,7 +45,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.jpg" alt="Mutungi Ambrozio - Software Engineer" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">MUTUNGI AMBROZIO</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
