--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/profile-img.jpg" alt="Mutungi Ambrozio - Software Engineer" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">AMBROZIO MUTUNGI</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/AmbroseLovis" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -92,7 +92,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/profile-img1.jpg" class="img-fluid" alt="Mutungi Ambrozio - Software Engineer">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Software Engineer &amp; Web Developer.</h3>
